--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -5,6 +5,7 @@
     padding: 0.5em 1em;
     border-radius: 0.5em;
     background: rgb(var(--bright-rgb));
+    color: rgb(var(--dark-rgb));
     font-family: 'indivisible', sans-serif;
     font-weight: 500;
     z-index: 3;
