--- a/app/globals.css
+++ b/app/globals.css
@@ -40,14 +40,14 @@ h1 {
 }
 h2 {
   width: 70%;
-  font-family: 'indivisible', sans-serif;
-  font-size: 1em;
+  font-family: 'scotch-display', serif;
+  font-size: clamp(1em, 4vw, 2.5em);
   padding: 0.5em 0;
 }
 h3 {
   width: 70%;
   font-family: 'scotch-display', serif;
-  font-size: clamp(1em, 4vw, 2.5em);
+  font-size: clamp(1em, 4vw, 2.25em);
   padding: 0.5em 0;
 }
 p {
