--- a/app/globals.css
+++ b/app/globals.css
@@ -46,13 +46,14 @@ h2 {
 }
 h3 {
   width: 70%;
-  font-family: 'scotch-display', serif;
-  font-size: clamp(1em, 4vw, 2.25em);
-  padding: 0.5em 0;
+  font-family: 'indivisible', serif;
+  font-size: clamp(1.15em, 2vw, 1.5em);
+  font-weight: 600;
+  padding: 0.75em 0;
 }
 p {
   width: 70%;
   font-family: 'indivisible', sans-serif;
-  font-size: clamp(1.15em, 3vw, 1.35em);
+  font-size: clamp(1.15em, 2vw, 1.35em);
   font-weight: 400;
 }
