--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -1,7 +1,7 @@
 .email {
     position:fixed;
     top: 2em;
-    right: 2em;
+    right: 1.5em;
     padding: 0.5em 1em;
     border-radius: 0.5em;
     background: rgb(var(--bright-rgb));
@@ -81,12 +81,69 @@
     }
 }
 
+.disrupt {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background-color: rgb(var(--background-rgb));
+
+    img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.featured {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10vw 1em;
+    text-align: center;
+    gap: 10vw;
+
+    .case {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+        aside {
+            text-align: left;
+            width: 100%;
+        }
+        .gallery {
+            width: 100%;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+
 @media screen and (min-width: 980px) {
     .split {
         flex-direction: row;
         &.flipped { flex-direction: row-reverse; }
         div, img {
             width: 50%;
+        }
+    }
+
+    .featured {
+        .case {
+            flex-direction: row;
+            aside {
+                width: 25%;
+            }
+            .gallery {
+                width: 75%;
+            }
         }
     }
 }
