--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,18 @@ p {
   font-weight: 400;
   opacity: 0.7;
 }
+
+ul {
+  position: relative;
+  font-size: 0.9em;
+  margin: 1em 0 0 0;
+
+  &:before {
+    content: attr(aria-label);
+    line-height: 3em;
+  }
+
+  li { 
+    opacity: 0.7;
+  }
+}
