--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -116,6 +116,11 @@
             width: 100%;
         }
         .gallery {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 1em;
             width: 100%;
 
             img {
