--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -130,6 +130,57 @@
     }
 }
 
+.cv {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: left;
+    margin-bottom: 2em;
+    border-radius: 1em;
+    width: 100%;
+    padding: 0 1em;
+
+    h5 {
+        margin-bottom: 2em;
+    }
+
+    .row {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1.5em;
+        gap: 0.5em;
+        color: inherit;
+        text-decoration: inherit;
+
+        p {
+            font-size: 0.9em;
+            color: rgb(var(--foreground-rgb));
+
+            &.desc {
+                opacity: 0.4;
+            }
+        }
+
+
+
+        &:hover {
+            p {
+                color: rgb(var(--emphasis-rgb));
+                opacity:1;
+                &.desc {
+                    color: rgb(var(--foreground-rgb));
+                    opacity: 0.4;
+                }
+            }
+        }
+
+    }
+}
+
+
 
 @media screen and (min-width: 980px) {
     .split {
@@ -157,5 +208,9 @@
                 .half { width: calc(50% - 0.5em); }
             }
         }
+    }
+
+    .cv {
+        padding: 0 calc(1em + 25% + 2vw);
     }
 }
