--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -138,7 +138,7 @@
     margin-bottom: 2em;
     border-radius: 1em;
     width: 100%;
-    padding: 0 1em;
+    padding: 10vw 1em;
 
     h5 {
         margin-bottom: 2em;
@@ -211,6 +211,6 @@
     }
 
     .cv {
-        padding: 0 calc(1em + 25% + 2vw);
+        padding: 10vw calc(1em + 25% + 2vw);
     }
 }
