--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -133,17 +133,14 @@
 .cv {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     text-align: left;
     margin-bottom: 2em;
     border-radius: 1em;
     width: 100%;
     padding: 10vw 1em;
 
-    h5 {
-        margin-bottom: 2em;
-    }
-
+     
     .row {
         width: 100%;
         display: flex;
@@ -164,7 +161,16 @@
             }
         }
 
-
+        &.title {
+            margin-bottom: 2em;
+            a {
+                font-size: 0.85em;
+                opacity: 0.3;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
 
         &:hover {
             p {
@@ -176,8 +182,8 @@
                 }
             }
         }
-
     }
+
 }
 
 
