--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -86,6 +86,7 @@
     width: 100%;
     height: 70vh;
     background-color: rgb(var(--background-rgb));
+    filter: brightness(90%);
 
     img {
         position: absolute;
@@ -140,7 +141,10 @@
     width: 100%;
     padding: 10vw 1em;
 
-     
+    h5 {
+        margin-bottom: 2em;
+    }
+
     .row {
         width: 100%;
         display: flex;
@@ -161,16 +165,7 @@
             }
         }
 
-        &.title {
-            margin-bottom: 2em;
-            a {
-                font-size: 0.85em;
-                opacity: 0.3;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
+        
 
         &:hover {
             p {
