--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -88,7 +88,7 @@
     background-color: rgb(var(--background-rgb));
     filter: brightness(90%);
 
-    img {
+    video {
         position: absolute;
         top: 0;
         left: 0;
