--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 :root {
   --foreground-rgb: 28, 28, 28;
@@ -62,14 +64,14 @@ h2 {
   width: 70%;
   font-family: 'scotch-display', serif;
   font-size: clamp(1.5em, 4vw, 2.5em);
-  padding: 0.5em 0;
+  padding: 0 0 0.5em 0;
 }
 h3 {
   width: 70%;
   font-family: 'indivisible', serif;
   font-size: clamp(1.15em, 2vw, 1.5em);
   font-weight: 500;
-  padding: 0.75em 0;
+  padding: 0 0 0.75em 0;
 }
 h4 {
   font-family: 'indivisible', serif;
