--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -77,6 +77,8 @@
         aspect-ratio: 5/4;
         overflow: hidden;
 
+        gap: 2em;
+
 
         &.invert {
             background: rgb(var(--foreground-rgb));
@@ -85,7 +87,7 @@
 
         .carousel {
             width: 100%;
-            height: 100%;
+            // height: 100%;
             overflow-x: auto;
             white-space: nowrap;
             display: flex;
@@ -115,16 +117,15 @@
             }
         }
         .carouselControls {
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
             display: none;
             justify-content: space-between;
             align-items: center;
             pointer-events: none;
             padding: 2vw;
+            gap: 2em;
 
             .prev, .next {
                 transform-origin: 50% 50%;
@@ -147,10 +148,7 @@
         }
 
         .dots {
-            position: absolute;
-            bottom: calc(1em + 2vw);
-            left: 50%;
-            transform: translateX(-50%);
+            position: relative;
 
             display: flex;
             gap: 4px;
