--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -188,7 +188,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10vw 1em;
+    padding: calc(3em + 10vw) 1em;
     text-align: center;
     gap: calc(3em + 10vw);
 
