--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,8 @@ h1 {
 h2 {
   width: 70%;
   font-family: 'scotch-display', serif;
-  font-size: clamp(1.5em, 4vw, 2.5em);
+  font-size: clamp(2em, 4vw, 4em);
+  line-height: 0.9em;
   padding: 0 0 0.5em 0;
 }
 h3 {
