--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -1,15 +1,55 @@
-.email {
+.header {
     position:fixed;
-    top: 2em;
-    right: 1.5em;
+    width: 100vw;
+    z-index: 3;
+    background: transparent;
+    overflow: hidden;
+
+
+    .headerBackground {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgb(var(--bright-rgb));
+        z-index: -1;
+        mix-blend-mode: normal;
+
+        @media (prefers-color-scheme: dark) {
+            background: rgb(var(--dark-rgb));
+        }
+    }
+
+    .content {
+        top: 0;
+        width: 100vw;
+        padding: 2em 1.5em;
+        max-width: 1400px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        justify-self: center;
+        position: relative;
+        z-index: 1;
+        @media (prefers-color-scheme: light) {
+            mix-blend-mode: difference;    
+        }
+
+        .logo {
+            width: 2em;
+        }
+    }
+}
+
+.email {
     padding: 0.5em 1em;
     border-radius: 0.5em;
     background: rgb(var(--bright-rgb));
     color: rgb(var(--dark-rgb));
     font-family: 'indivisible', sans-serif;
     font-weight: 500;
-    z-index: 3;
-    mix-blend-mode: difference;
 }
 
 .hero {
@@ -53,7 +93,7 @@
         height: 100%;
         object-fit: cover;
         z-index: -1;
-        filter: brightness(50%);
+        // filter: brightness(50%);
     }
 }
 
@@ -188,7 +228,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: calc(3em + 10vw) 1em;
+    width: 100vw;
+    max-width: 1400px;
+    justify-self: center;
+    padding: calc(3em + 10vw) 1.5em;
     text-align: center;
     gap: calc(3em + 10vw);
 
@@ -205,7 +248,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 1em;
+            gap: 0.5em;
             width: 100%;
 
             img {
@@ -258,7 +301,7 @@
     margin-bottom: 2em;
     border-radius: 1em;
     width: 100%;
-    padding: 10vw 1em;
+    padding: 10vw 1.5em;
 
     h4.title {
         margin-bottom: 2em;
@@ -363,7 +406,7 @@
                 img {
                     object-fit: cover;
                 }
-                .half { width: calc(50% - 0.5em); }
+                .half { width: calc(50% - 0.25em); }
             }
         }
     }
