--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -71,6 +71,14 @@
     z-index: 1;
 
     color: rgb(var(--bright-rgb));
+    
+    // Disable user selection, especially on mobile
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 
     h1 {
         display: flex;
@@ -82,11 +90,16 @@
         position: fixed;
         width: 80vw;
         max-width: 500px;
+        user-select: none;
+        -webkit-user-select: none;
+        -webkit-user-drag: none;
     }
 
     svg {
         position: fixed;
         bottom: 5vw;
+        width: clamp(1.5em, 2vw, 5em);
+        height: clamp(1.5em, 2vw, 5em);
         animation: 0.5s infinite alternate bounce;
     }
 
@@ -112,11 +125,18 @@
     }
 }
 
-.intro {
-    margin: -5em 1.5em 0 1.5em;
+.services {
     width: calc(100% - 3em);
     max-width: calc(1400px - 3em);
+    min-height: 70vh;
     justify-self: center;
+    display: grid;
+    place-content: center;
+
+    h1 {
+        text-align: center;
+        width: 100%;
+    }
 }
 
 .split {
