--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -4,7 +4,8 @@
     z-index: 10;
     background: transparent;
     overflow: hidden;
-
+    display: grid;
+    place-content: center;
 
     .headerBackground {
         position: absolute;
@@ -64,11 +65,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     text-align: center;
-    padding: 5vw 0;
     z-index: 1;
+    overflow: hidden;
 
     color: rgb(var(--bright-rgb));
     
@@ -126,20 +127,14 @@
 }
 
 .services {
-    width: calc(100% - 3em);
-    max-width: calc(1400px - 3em);
-    min-height: 50vh;
-    padding: calc(1em + 5vw) 0;
-    justify-self: center;
     display: flex;
-    justify-content: center;
-    align-items: start;
-    h4 {
-        width: 50%;
-    }
+    flex-direction: column;
+    width: 100vw;
+    height: 80vh;
+    padding: calc(2em + 5vw) 1.5em;
+    max-width: 1400px;
 
     ol {
-        width: 50%;
         margin: 0;
         font-size: 0.9em;
         opacity: 0.7;
@@ -447,6 +442,13 @@
             .dots {
                 display: none;
             }
+        }
+    }
+
+    .services {
+        flex-direction: row;
+        div, ol {
+            width: 50%;
         }
     }
 
