--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -1,401 +1,4 @@
-.header {
-    position:fixed;
-    width: 100vw;
-    z-index: 10;
-    background: transparent;
-    overflow: hidden;
-    display: grid;
-    place-content: center;
-
-    .headerBackground {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgb(var(--background-rgb));
-        z-index: -1;
-        mix-blend-mode: normal;
-
-        // @media (prefers-color-scheme: dark) {
-        //     background: rgb(var(--dark-rgb));
-        // }
-    }
-
-    .content {
-        top: 0;
-        width: 100vw;
-        padding: 2em 1.5em;
-        max-width: 1400px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        justify-self: center;
-        position: relative;
-        z-index: 1;
-        // @media (prefers-color-scheme: light) {
-            mix-blend-mode: difference;    
-        // }
-
-        .logo {
-            width: 2em;
-        }
-    }
-}
-
-.email {
-    padding: 0.4em 0.8em;
-    border-radius: 4px;
-    color: rgb(var(--bright-rgb));
-    border: 2px solid rgb(var(--bright-rgb));
-    font-family: 'indivisible', sans-serif;
-    font-weight: 300;
-    transition: all 0.1s;
-
-    &:hover {
-        background: rgb(var(--bright-rgb));
-        color: rgb(var(--dark-rgb));
-    }
-}
-
-.hero {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    text-align: center;
-    z-index: 1;
-    overflow: hidden;
-
-    color: rgb(var(--bright-rgb));
-    
-    // Disable user selection, especially on mobile
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: transparent;
-
-    h1 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    img {
-        position: fixed;
-        width: 80vw;
-        max-width: 500px;
-        user-select: none;
-        -webkit-user-select: none;
-        -webkit-user-drag: none;
-    }
-
-    svg {
-        position: fixed;
-        bottom: 5vw;
-        width: clamp(1.5em, 2vw, 5em);
-        height: clamp(1.5em, 2vw, 5em);
-        animation: 0.5s infinite alternate bounce;
-    }
-
-    @keyframes bounce {
-        from {
-            translate: 0 0;
-        }
-
-        to {
-            translate: 0 0.25em;
-        }
-    }
-
-    .bg {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-        // filter: brightness(50%);
-    }
-}
-
-.services {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 80vh;
-    padding: calc(2em + 5vw) 1.5em;
-    max-width: 1400px;
-
-    ol {
-        margin: 0;
-        font-size: 0.9em;
-        opacity: 0.7;
-        line-height: 1.65;
-    }
-}
-
-.split {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: stretch;
-    width: 100%;
-
-    .content, img, video {
-        position: relative;
-        width: 100%;
-        max-height: 70vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        object-fit: cover;
-        text-align: center;
-        overflow: hidden;
-        background: rgb(var(--background-rgb));
-        color: rgb(var(--foreground-rgb));
-        gap: 2em;
-
-        p { 
-            width: 110%;
-            font-family: 'scotch-display', serif;
-            font-size: clamp(1em, 5vw, 2.5em);
-            white-space: nowrap;
-            line-height: 50%;
-        }
-
-
-        &.invert {
-            background: rgb(var(--foreground-rgb));
-            color: rgb(var(--background-rgb));
-        }
-
-        .carousel {
-            width: 100%;
-            // height: 100%;
-            overflow-x: auto;
-            white-space: nowrap;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            flex-wrap: nowrap;
-            scroll-snap-type: x mandatory;
-            -webkit-overflow-scrolling: touch;
-
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-
-            .carouselContent {
-                width: 100%;
-                scroll-snap-align: center;
-                flex-shrink: 0;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                white-space: wrap;
-                user-select: none;
-            }
-        }
-        .carouselControls {
-            position: relative;
-            top: 0;
-            left: 0;
-            display: none;
-            justify-content: space-between;
-            align-items: center;
-            pointer-events: none;
-            gap: 2em;
-
-            .prev, .next {
-                transform-origin: 50% 50%;
-                opacity: 0.2;
-                transition: opacity 0.15s ease-in-out;
-                pointer-events: all;
-                
-                &:hover {
-                    opacity: 1;
-                }
-
-                svg {
-                    width: 32px;
-                    height: 32px;
-                }
-            }
-
-            .prev { transform: rotate(90deg); }
-            .next { transform: rotate(-90deg); }
-        }
-
-        .dots {
-            position: relative;
-            display: flex;
-            gap: 4px;
-
-            .dot {
-                width: 24px;
-                height: 2px;
-                background: rgb(var(--foreground-rgb));
-                opacity: 0.1;
-
-                &:first-child {
-                    opacity: 1;
-                }
-            }
-        }
-    }
-}
-
-.disrupt {
-    position: relative;
-    width: 100%;
-    height: 70vh;
-    background-color: rgb(var(--background-rgb));
-    filter: brightness(90%);
-
-    video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
-.featured {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    max-width: 1400px;
-    justify-self: center;
-    padding: calc(3em + 10vw) 1.5em;
-    text-align: center;
-    gap: calc(3em + 10vw);
-
-    .case {
-        display: flex;
-        flex-direction: column;
-        gap: calc(1em + 2vw);
-        aside {
-            text-align: left;
-            width: 100%;
-        }
-        .gallery {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 0.5em;
-            width: 100%;
-
-            img {
-                width: 100%;
-            }
-        }
-    }
-}
-
-.archive {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10vw 1em;
-    text-align: center;
-    gap: calc(3em + 10vw);
-
-    .gallery {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: start;
-        align-items: stretch;
-        align-content: stretch;
-        gap: 1em;
-
-        &:after {
-            display: block;
-            content: "";
-            margin: 8px;
-            flex: 999 999 auto;
-        }
-
-        img {
-            flex: 1 1 auto;
-            width: calc(33% - 0.5em);
-            object-fit: cover;
-                // margin: 8px;
-        }
-    }
-}
-
-.cv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    margin-bottom: 2em;
-    border-radius: 1em;
-    width: 100%;
-    padding: 10vw 1.5em;
-
-    h4.title {
-        margin-bottom: 2em;
-    }
-
-    .row {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 1.5em;
-        gap: 0.5em;
-        color: inherit;
-        text-decoration: inherit;
-
-        p {
-            font-size: 0.9em;
-            color: rgb(var(--foreground-rgb));
-
-            &.desc {
-                opacity: 0.4;
-            }
-        }
-
-        
-
-        &:hover {
-            p {
-                color: rgb(var(--emphasis-rgb));
-                opacity:1;
-                &.desc {
-                    color: rgb(var(--foreground-rgb));
-                    opacity: 0.4;
-                }
-            }
-        }
-    }
-
-}
-
+// Footer-specific styles used in layout.tsx
 .logo {
     height: 2.3em;
     order: 1;
@@ -412,69 +15,12 @@
         margin: 0;
     }
 
-    p { font-size: 0.9em; }
-}
-
-
-.network {
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
-    flex-shrink: 0;
-    max-width: fit-content;
-    order: 3;
-
-    img {
-        height: 2.3em;
+    p { 
+        font-size: 0.9em; 
     }
 }
-
 
 @media screen and (min-width: 980px) {
-    .split {
-        flex-direction: row;
-        &.flipped { flex-direction: row-reverse; }
-        div.content, img, video {
-            width: 50%;
-            .carouselControls {
-                display: flex;
-            }
-            .dots {
-                display: none;
-            }
-        }
-    }
-
-    .services {
-        flex-direction: row;
-        div, ol {
-            width: 50%;
-        }
-    }
-
-    .featured {
-        .case {
-            flex-direction: row;
-            aside {
-                width: 25%;
-            }
-            .gallery {
-                width: 75%;
-                flex-direction: row;
-                flex-wrap: wrap;
-                align-items: stretch;
-                img {
-                    object-fit: cover;
-                }
-                .half { width: calc(50% - 0.25em); }
-            }
-        }
-    }
-
-    .cv {
-        padding: 10vw calc(1em + 25% + 2vw);
-    }
-
     .brand {
         width: auto;
         flex: 1;
