--- a/app/notes/Notes.module.scss
+++ b/app/notes/Notes.module.scss
@@ -1,81 +1,60 @@
 .notesPage {
   width: 100%;
   min-height: 100vh;
-  padding: calc(2em + 5vw) 1.5em;
+  padding: calc(2em + 15vw) 0 calc(2em + 5vw) 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .container {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  
-  h1 {
-    margin-bottom: 0.5em;
-  }
+  width: 100vw;
+  padding: 2em 1.5em;
+  max-width: 1400px;
 }
 
 .subtitle {
   font-size: 1.1em;
   margin-bottom: 3em;
-  opacity: 0.8;
 }
 
 .empty {
   text-align: center;
   padding: 3em 0;
-  opacity: 0.6;
 }
 
 .postList {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 5em 0;
   display: flex;
   flex-direction: column;
   gap: 2em;
 }
 
 .postItem {
-  border-bottom: 1px dotted rgba(var(--foreground-rgb), 0.1);
-  padding-bottom: 2em;
-  
-  &:last-child {
-    border-bottom: none;
-  }
+  padding: 2.5em 0;
+  border-bottom: 0.5px solid rgba(var(--foreground-rgb), 0.15);
 }
 
 .postLink {
   text-decoration: none;
   color: inherit;
-  display: block;
-  transition: opacity 0.2s ease;
-  
+  display: flex;
+
   &:hover {
-    opacity: 0.7;
+    .postTitle {
+      color: rgb(var(--primary-rgb));
+    }
   }
   
   article {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1em;
   }
-}
-
-.imageContainer {
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  overflow: hidden;
-  border-radius: 4px;
-  background: rgba(var(--foreground-rgb), 0.05);
-}
-
-.postImage {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .postPreview {
@@ -84,23 +63,40 @@
   gap: 0.5em;
 }
 
+.postHeader {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1em;
+  width: 100%;
+  margin-bottom: 1em;
+
+  h2 {
+    width: auto;
+  }
+}
+
 .postTitle {
-  font-size: clamp(1.5em, 3vw, 2em);
   margin: 0;
-  line-height: 1.2;
+  padding: 0;
+  transition: color 0.1s;
 }
 
 .postDescription {
-  font-size: 1em;
+  // font-size: 1em;
   line-height: 1.6;
-  opacity: 0.8;
   margin: 0;
 }
 
 .postDate {
-  font-size: 0.9em;
-  opacity: 0.6;
-  margin-top: 0.5em;
+  display: flex;
+  position: relative;
+  font-size: 0.65em;
+  padding: 0.5em;
+  margin-bottom: 1em;
+  border-radius: 0.65em;
+  width: max-content;
+  background: white;
 }
 
 .backLink {
@@ -108,31 +104,14 @@
   margin-bottom: 2em;
   text-decoration: none;
   color: inherit;
-  opacity: 0.7;
-  transition: opacity 0.2s ease;
   font-size: 0.95em;
   
-  &:hover {
-    opacity: 1;
-  }
 }
 
 .postArticle {
   width: 100%;
 }
 
-.postHeader {
-  margin-bottom: 2em;
-  
-  .postTitle {
-    margin-bottom: 0.5em;
-  }
-  
-  .postDate {
-    display: block;
-    margin-top: 0.5em;
-  }
-}
 
 .postContent {
   line-height: 1.8;
@@ -142,14 +121,13 @@
 @media screen and (min-width: 768px) {
   .postLink {
     article {
-      flex-direction: row;
       gap: 2em;
     }
   }
   
   .imageContainer {
-    width: 40%;
-    min-width: 200px;
+    width: 25%;
+    // min-width: 100px;
   }
   
   .postPreview {
