--- a/app/globals.css
+++ b/app/globals.css
@@ -180,8 +180,14 @@ hr {
   p {
     margin-bottom: 1.5em;
     opacity: 0.9;
+    max-width: 720px;
   }
   
+  hr {
+    margin-bottom: 1.5em;
+    max-width: 720px;
+  }
+
   h2, h3, h4 {
     margin-top: 2em;
     margin-bottom: 1em;
